[package]
name = "ue_reflection"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
bitflags = { workspace = true, features = ["serde"] }
ordered-float = { version = "5.0.0", features = ["serde"] }
ordermap = { version = "0.5.5", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
